# Court-Hub

./: .dockerignore  .env.example  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial.py
docker/: Dockerfile
docker/prometheus/: prometheus.yml
docker/tempo/: tempo.yml
src/: main.py
src/application/: dto.py
src/application/use_cases/: ai_operations.py  analytics.py  auth.py  crud.py  deadlines.py  hearings.py  matters.py
src/core/: config.py  logging.py  security.py
src/domain/: entities.py  exceptions.py  repositories.py  services.py  value_objects.py
src/infrastructure/ai/: pipelines.py
src/infrastructure/ai/prompts/: case_summary_prompt.md  chronology_builder_prompt.md  hearing_memo_prompt.md  inconsistency_detection_prompt.md  risk_review_prompt.md
src/infrastructure/cache/: service.py
src/infrastructure/database/: models.py  repositories.py  session.py  types.py
src/infrastructure/integrations/: court_stub.py
src/infrastructure/observability/: metrics.py
src/infrastructure/queue/: celery_app.py  tasks.py
src/presentation/: deps.py  middleware.py
src/presentation/api/v1/: ai.py  alerts.py  analytics.py  audit.py  auth.py  budgets.py  chronology.py  claims.py  deadlines.py  defenses.py  evidence.py  health.py  hearings.py  issues.py  matters.py  outside_counsel.py  parties.py  router.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_deadlines.py  test_evidence.py  test_health.py  test_matters.py
